[package]
name = "atomic-wait"
description = "Cross-platform atomic wait and wake (aka futex) functionality."
repository = "https://github.com/m-ou-se/atomic-wait"
keywords = ["atomic", "futex"]
version = "1.1.0"
edition = "2021"
license = "BSD-2-Clause"
categories = ["concurrency", "os", "no-std"]

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_System_WindowsProgramming"] }
